Change from em width to percentage width

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ h1, h2, h3
 
 .bio {
     text-align: justify;
-    margin-left:20em;
-    margin-right:20em;
+    margin-left:25%;
+    margin-right:25%;
 }
 
 a {
