--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+    background-color: lightgrey;
+}
+
 h1, h2, h3
 {
     font-family: Arial, Helvetica, sans-serif;
@@ -5,13 +9,14 @@ h1, h2, h3
 }
 
 .bio {
+    font-family: Arial, Helvetica, sans-serif;
     text-align: justify;
     margin-left:25%;
     margin-right:25%;
 }
 
 a {
-    color: grey;
+    color: DimGrey;
     text-decoration: none;
 }
 
