--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,22 @@ h1, h2, h3
     text-align: center;
 }
 
+p {
+    text-align: justify;
+}
+
+td, th {
+    vertical-align:top;
+}
+
 .bio {
     font-family: Arial, Helvetica, sans-serif;
     text-align: justify;
     margin-left:25%;
     margin-right:25%;
+}
+
+.links {
 }
 
 a {
