--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-    background-color: lightgrey;
+    background-color: linen;
 }
 
 h1, h2, h3
@@ -50,6 +50,7 @@ a:hover {
 #maincontent {
     float: right;
     width:45%;
+    margin-left:5%
 }
 
 #panel {
