--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-    background-color: whitesmoke;
+    background-color: white; /* whitesmoke; */
 }
 
 h1, h2, h3
@@ -34,7 +34,7 @@ td, th {
 }
 
 a {
-    color: DimGrey;
+    color: steelblue;
     text-decoration: none;
 }
 
