--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ h1, h2, h3
     margin-top: 0;
     font-family: Geneva, Arial, Helvetica, sans-serif;
     text-align: center;
+    font-weight: normal;
 }
 
 p {
